# python_4_neuroscience

./: .pre-commit-config.yaml  CONTRIBUTING.md  QUICKSTART.md  README.md  pyproject.toml  setup_project.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: README.md  neural_data_analysis_tutorial.ipynb
scripts/: README.md  example_analysis.py
src/python_4_neuroscience/: __init__.py  neural_simulation.py  pca_analysis.py
src/python_pkg_template/: __init__.py
tests/: README.md  test_neural_simulation.py  test_pca_analysis.py
