[project]
name = "python-4-neuroscience"
version = "0.1.0"
description = "A Python Package Template for Neuroscience Data Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [
  {email = "angelarodriguez@princeton.edu", name = "Angela Rodriguez"}
]
dependencies = [
  "numpy >= 1.26.0",
  "scipy >= 1.11.0",
  "matplotlib >= 3.8.0",
  "scikit-learn >= 1.3.0",
]

[build-system]
requires = [
  "setuptools >= 62.3.2",
  "setuptools-scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.3.1",
  "black == 24.10.0",
  "isort == 5.13.2",
  "mypy == 1.13.0",
  "pylint == 3.3.2",
  "pytest == 8.3.4",
  "pre-commit == 4.0.1",
  "ruff == 0.8.4",
]
notebooks = [
  "jupyter >= 1.1.1",
  "ipykernel >= 6.29.0",
  "notebook >= 7.3.2",
]
build_docs = [
  "mkdocs-material >= 9.5.0",
  "mkdocstrings[python] >= 0.26.0",
]

# This is required to allow us to have notebooks/ at the top level.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_4_neuroscience = ["py.typed"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "matplotlib.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
